[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "nhl-api-py"
version = "2.19.0"
description = "NHL API (Updated for 2024/2025) and EDGE Stats.  For standings, team stats, outcomes, player information.  Contains each individual API endpoint as well as convience methods as well as pythonic query builder for more indepth EDGE stats."
authors = ["Corey Schaf <cschaf@gmail.com>"]
readme = "README.md"
packages = [{include = "nhlpy"}]
license = "GPL-3.0-or-later"
homepage = "https://github.com/coreyjs/nhl-api-py"
repository = "https://github.com/coreyjs/nhl-api-py"
keywords = ["nhl", "api", "wrapper", "hockey", "sports", "edge", "edge stats", "edge analytics", "edge sports",
    "edge hockey", "edge nhl", "edge nhl stats", "edge nhl analytics", "edge nhl sports", "edge nhl hockey",
    "edge nhl data", "edge nhl data analytics", "edge nhl data stats", "edge nhl data sports", "edge nhl data hockey",
    "edge nhl data stats analytics", "edge nhl data stats sports", "edge nhl data stats hockey", "hockey ai", "hockey machine learning", "nhl ML", "nhl AI",
    "nhl machine learning", "nhl stats", "nhl analytics", "nhl sports", "nhl hockey", "nhl nhl", "nhl nhl stats", "nhl nhl analytics", "nhl nhl sports",
    "edge nhl data hockey stats"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Topic :: Software Development :: Libraries :: Python Modules"
]
include = [
    "nhlpy/data/*",
]

[tool.poetry.dependencies]
python = "^3.9"
httpx = "*"

[tool.poetry.group.dev.dependencies]
pytest="^7.1.3"
pytest-mock = "*"
mypy = "*"
ruff = "*"
black = "*"
ipykernel = "*"

[tool.ruff]
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
]
line-length = 121



[tool.black]
line-length = 121
indent = 4